--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,22 +222,19 @@ section {
 }
 
 .trainer {
-    width: 900px;
-    margin: 0 auto 30px auto;
+    margin: 0 auto 20px auto;
     background: #024e76;
     color: #fce138;
-    overflow: auto;
+    flex: 1;
 }
 
 .trainer img {
-    width: 35%;
-    float: left;
+    width: 100%;
+    
 }
 
 .trainer-bio {
-    padding: 35px;
-    float: left;
-    width: 65%;
+    padding: 25px;
     line-height: 1.3;
 }
 
@@ -267,6 +264,13 @@ section {
     font-size: 17px;
 }
 
+.trainers {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
 /* Reach out styles start */
 .contact {
     background: #024e76;
